[gd_scene load_steps=13 format=3 uid="uid://dphmbf3c8t587"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/action_container.gd" id="1_co4u3"]
[ext_resource type="PackedScene" uid="uid://0wbd87xeuk1l" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/parts/ActiveMenu.tscn" id="3_b0sqn"]
[ext_resource type="PackedScene" uid="uid://dhkyb6t56c2fk" path="res://UI/Buttons/KeyBtn/KeyBtn.tscn" id="4_n6idl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvym8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csxiv"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1lmj"]
bg_color = Color(0.366595, 0.366595, 0.366595, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grvao"]
bg_color = Color(1, 0.339692, 0.306841, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvbsd"]
bg_color = Color(0.455201, 0.00200917, 0.712752, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2llv"]
bg_color = Color(0, 0.529412, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11yxg"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyw14"]
bg_color = Color(0, 0.529412, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xawaa"]
bg_color = Color(0, 0.529412, 0.278431, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ActionContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_bottom = 0
script = ExtResource("1_co4u3")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0.0980392)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_nvym8")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_csxiv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="LeftSideBtnList" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ContextBtn" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/LeftSideBtnList" instance=ExtResource("4_n6idl")]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e1lmj")
title = "SHIFT"
assigned_key = "TAB"
icon = 36
panel_color = Color(0.366595, 0.366595, 0.366595, 1)

[node name="ResearchersBtn" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/LeftSideBtnList" instance=ExtResource("4_n6idl")]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_grvao")
title = "RESEARCHERS"
assigned_key = "B"
icon = 39
panel_color = Color(1, 0.339692, 0.306841, 1)

[node name="SCPBtn" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/LeftSideBtnList" instance=ExtResource("4_n6idl")]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tvbsd")
title = "CONTAINMENT"
assigned_key = "C"
icon = 28
panel_color = Color(0.455201, 0.00200917, 0.712752, 1)

[node name="RecruitBtn" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/LeftSideBtnList" instance=ExtResource("4_n6idl")]
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2llv")
title = "RECRUIT"
assigned_key = "A"
icon = 25
panel_color = Color(0, 0.529412, 0.278431, 1)

[node name="RightSideBtnList" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="KeyBtn" parent="PanelContainer/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RightSideBtnList" instance=ExtResource("4_n6idl")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_11yxg")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_csxiv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="ObjectivesBtn" parent="PanelContainer/HBoxContainer/PanelContainer2/MarginContainer/HBoxContainer" instance=ExtResource("4_n6idl")]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_uyw14")
title = "OBJECTIVES"
assigned_key = "TAB"
icon = 48
panel_color = Color(0, 0.529412, 0.278431, 1)

[node name="NextBtn" parent="PanelContainer/HBoxContainer/PanelContainer2/MarginContainer/HBoxContainer" instance=ExtResource("4_n6idl")]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_xawaa")
title = "NEXT DAY"
assigned_key = "ENTER"
icon = 27
panel_color = Color(0, 0.529412, 0.278431, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="ActiveMenu" parent="Control" instance=ExtResource("3_b0sqn")]
layout_mode = 2
offset_left = 8.0
offset_top = 887.0
offset_right = 114.0
offset_bottom = 999.0
size_flags_horizontal = 0
size_flags_vertical = 0
